--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<app-navbar></app-navbar>
-<app-sidebar></app-sidebar>
-<div>
-  <span>{{ title }} app is running!</span>
+<app-navbar id="navbar" class="navbar navbar-dark fixed-top bg-dark"></app-navbar>
+
+<div class="container-fluid">
+  <div class="row" id="mainContent">
+    <app-sidebar id="sideBar" class="com-sm-3 col-md-2 d-none d-sm-block  sidebar"></app-sidebar>
+    <div class="col-sm-9" id="dashboard">
+      
+    </div>
+  </div> 
 </div>
+
 
     
