Updated button state

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -5,5 +5,5 @@
     <div class="card-body status">
         {{server.isOnline}}
     </div>
-    <button (click)="toggleStatus(server.isOnline)" class="btn btn-default action">Toggle Status</button>
+    <button (click)="toggleStatus(server.isOnline)" class="btn btn-default action">{{buttonText}}</button>
 </div>
